Fix submenu height in small screens, last child elemenent from submenu was overflown in small screens, delete css animation a project card buttons

--- a/main.css
+++ b/main.css
@@ -563,7 +563,7 @@ nav a:hover {
 }
 
 .main-nav-submenu__container-ul:hover {
-    height: 120px;
+    height: 160px;
     border-radius: 0px 0px 0px 10px;
 
 }
@@ -1279,27 +1279,20 @@ nav a:hover {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e48697', endColorstr='#000011', GradientType=1 );
 }
 
-@keyframes pulse-link {
-    0%{
 
-        transform: scale(1.0);
-        ;}
-    50%{
-        color: var(--main-a-outside-color);
-        transform: scale(1.02); }
-    100%{
-        transform: scale(1.0);
-        ;}
+@keyframes pulse-link--color {
+    0%{transform: scale(1.0);}
+    50%{ color: var(--main-a-outside-color);transform: scale(1.02); }
+    100%{transform: scale(1.0);}
 }
 
 .project-card-container:hover .project-card__body-text-title h3{
-    animation-name: pulse-link;
+    animation-name: pulse-link--color;
     animation-duration: 0.8s;
 }
 
 .project-card-container:hover .project-card__button-card p{
     transition: ease-in-out;
-    animation-name: pulse-link;
     animation-duration: 0.8s;
 }
 
